--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -42,6 +42,12 @@
     a {
       display: block;
       padding: 0.8em;
+      &:hover {
+        text-decoration: underline;
+      }
+      &:focus {
+        outline: 3px solid white;
+      }
     }
   }
 
@@ -53,6 +59,10 @@
     color: #fff;
     text-transform: uppercase;
   }
+  &-btn:focus,
+  &-logo:focus {
+    outline: 3px solid white;
+  }
 
   &-show {
     display: block;
@@ -60,6 +70,12 @@
   }
 
   @media (min-width: $med) {
+    &-bar .container {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
+
     &-btn {
       display: none;
     }
@@ -80,14 +96,6 @@
 
     &-links > * + * {
       margin-left: 1em;
-    }
-  }
-
-  @media (min-width: $large) {
-    &-bar .container {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
     }
   }
 }
